# finance-toolkit

./: .coverage  .gitignore  AGENTS.md  EXPLORATION.md  README.md  SOP.md  company_analyzer.py  config.yaml  demo.py  industry.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt
.agentstalk/: Features  Features.md  README_AGENTSTALK.txt  plan_03281830_fullstack_enhancement.md  plan_03281830_fullstack_enhancement_COORDINATED.md  plan_03281900_STRUCTURE_CONSOLIDATION  plan_03282030_AGENT_SOP  plan_03282030_AGENT_SOP_CLOSED  progress_03281058_BATCH_ANALYSIS_MAIN.md  progress_03281816_repo_scan_KIMI_CLOSED.md  progress_03281850_INTEGRATION_KIMI_CLOSED.md  progress_03281900_DOCUMENTATION_KIMI_CLOSED.md  progress_03281910_CHARTS_KIMI.md  progress_03281910_CHARTS_KIMI_CLOSED.md
.agentstalk/archive/: progress_03281030_MULTI_AGENT_SCAN_STARTED_CLOSED.txt
.agentstalk/issues/: repair_03281041_CLI_ENTRYPOINT_ISSUE_CLOSED  scan_03281830_DATA_ROOT_ISSUE  scan_03281830_DATA_ROOT_ISSUE_CLOSED  scan_03281830_INDUSTRY_DUPLICATION_ISSUE  scan_03281830_INDUSTRY_DUPLICATION_ISSUE_CLOSED  scan_03281830_PATH_ISSUE  scan_03281830_PATH_ISSUE_CLOSED  scan_03281830_STORAGE_VALIDATION_GAPS
.agentstalk/progress/: pdf_03282000_STARTED_CLOSED  repair_03281041_INTEGRATION_STARTED  repair_03281041_INTEGRATION_STARTED_CLOSED  scan_03281830_INITIAL  scan_03281830_MULTI_AGENT_FULL_SCAN_CLOSED
analyzers/: financial_metrics.py
examples/: agent_workflow.py  basic_usage.py  batch_analysis.py  charts_demo.py
scripts/finance/: data_provider.py  industry.py  models.py
scripts/finance/storage/: company_db.py
src/finance_toolkit/: __init__.py  __main__.py  __version__.py  cli.py  config.py  exceptions.py  logger.py  mcp_server.py  models.py
src/finance_toolkit/analyzer/: __init__.py  company.py  dupont.py  metrics.py  trend.py  valuation.py
src/finance_toolkit/industry/: __init__.py  chain.py  classification.py
src/finance_toolkit/report/: __init__.py  charts.py  generator.py  pdf_generator.py
storage/: company_db.py
tests/: __init__.py  conftest.py  test_batch_analysis.py  test_cli.py  test_models.py
